--- a/main.html
+++ b/main.html
@@ -1,16 +1,60 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Movie Image Gallery</title>
+  <!-- Bootstrap 5 CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <style>
+    img {
+      width: 100px;
+      height: 100px;
+    }
+  </style>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+  <div class="container-fluid">
+    <!-- First Row (12 images, col-sm-1) -->
+    <div class="row">
+      <div class="col-sm-1"><img src="https://via.placeholder.com/100" alt="Movie Image"></div>
+      <div class="col-sm-1"><img src="https://via.placeholder.com/100" alt="Movie Image"></div>
+      <div class="col-sm-1"><img src="https://via.placeholder.com/100" alt="Movie Image"></div>
+      <div class="col-sm-1"><img src="https://via.placeholder.com/100" alt="Movie Image"></div>
+      <div class="col-sm-1"><img src="https://via.placeholder.com/100" alt="Movie Image"></div>
+      <div class="col-sm-1"><img src="https://via.placeholder.com/100" alt="Movie Image"></div>
+      <div class="col-sm-1"><img src="https://via.placeholder.com/100" alt="Movie Image"></div>
+      <div class="col-sm-1"><img src="https://via.placeholder.com/100" alt="Movie Image"></div>
+      <div class="col-sm-1"><img src="https://via.placeholder.com/100" alt="Movie Image"></div>
+      <div class="col-sm-1"><img src="https://via.placeholder.com/100" alt="Movie Image"></div>
+      <div class="col-sm-1"><img src="https://via.placeholder.com/100" alt="Movie Image"></div>
+      <div class="col-sm-1"><img src="https://via.placeholder.com/100" alt="Movie Image"></div>
+    </div>
 
+    <!-- Second Row (6 images, col-sm-2) -->
+    <div class="row">
+      <div class="col-sm-2"><img src="https://via.placeholder.com/100" alt="Movie Image"></div>
+      <div class="col-sm-2"><img src="https://via.placeholder.com/100" alt="Movie Image"></div>
+      <div class="col-sm-2"><img src="https://via.placeholder.com/100" alt="Movie Image"></div>
+      <div class="col-sm-2"><img src="https://via.placeholder.com/100" alt="Movie Image"></div>
+      <div class="col-sm-2"><img src="https://via.placeholder.com/100" alt="Movie Image"></div>
+      <div class="col-sm-2"><img src="https://via.placeholder.com/100" alt="Movie Image"></div>
+    </div>
+
+    <!-- Third Row (3 images, col-sm-4) -->
+    <div class="row">
+      <div class="col-sm-4"><img src="https://via.placeholder.com/100" alt="Movie Image"></div>
+      <div class="col-sm-4"><img src="https://via.placeholder.com/100" alt="Movie Image"></div>
+      <div class="col-sm-4"><img src="https://via.placeholder.com/100" alt="Movie Image"></div>
+    </div>
+
+    <!-- Fourth Row (1 image, col-sm-12) -->
+    <div class="row">
+      <div class="col-sm-12"><img src="https://via.placeholder.com/100" alt="Movie Image"></div>
+    </div>
+  </div>
+
+  <!-- Bootstrap 5 JS (Optional) -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
-
 </html>
