--- a/main.html
+++ b/main.html
@@ -1,60 +1,109 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Movie Image Gallery</title>
-  <!-- Bootstrap 5 CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  <style>
-    img {
-      width: 100px;
-      height: 100px;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Movie Gallery</title>
+    <!-- Bootstrap 5 CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        img {
+            width: 100px;
+            height: 100px;
+        }
+    </style>
 </head>
 <body>
-  <div class="container-fluid">
-    <!-- First Row (12 images, col-sm-1) -->
+
+<div class="container-fluid">
+    <!-- First Row - 12 columns -->
     <div class="row">
-      <div class="col-sm-1"><img src="https://via.placeholder.com/100" alt="Movie Image"></div>
-      <div class="col-sm-1"><img src="https://via.placeholder.com/100" alt="Movie Image"></div>
-      <div class="col-sm-1"><img src="https://via.placeholder.com/100" alt="Movie Image"></div>
-      <div class="col-sm-1"><img src="https://via.placeholder.com/100" alt="Movie Image"></div>
-      <div class="col-sm-1"><img src="https://via.placeholder.com/100" alt="Movie Image"></div>
-      <div class="col-sm-1"><img src="https://via.placeholder.com/100" alt="Movie Image"></div>
-      <div class="col-sm-1"><img src="https://via.placeholder.com/100" alt="Movie Image"></div>
-      <div class="col-sm-1"><img src="https://via.placeholder.com/100" alt="Movie Image"></div>
-      <div class="col-sm-1"><img src="https://via.placeholder.com/100" alt="Movie Image"></div>
-      <div class="col-sm-1"><img src="https://via.placeholder.com/100" alt="Movie Image"></div>
-      <div class="col-sm-1"><img src="https://via.placeholder.com/100" alt="Movie Image"></div>
-      <div class="col-sm-1"><img src="https://via.placeholder.com/100" alt="Movie Image"></div>
+        <!-- Repeat 12 times -->
+        <div class="col-sm-1">
+            <img src="https://via.placeholder.com/100" alt="Movie Image">
+        </div>
+        <div class="col-sm-1">
+            <img src="https://via.placeholder.com/100" alt="Movie Image">
+        </div>
+        <div class="col-sm-1">
+            <img src="https://via.placeholder.com/100" alt="Movie Image">
+        </div>
+        <div class="col-sm-1">
+            <img src="https://via.placeholder.com/100" alt="Movie Image">
+        </div>
+        <div class="col-sm-1">
+            <img src="https://via.placeholder.com/100" alt="Movie Image">
+        </div>
+        <div class="col-sm-1">
+            <img src="https://via.placeholder.com/100" alt="Movie Image">
+        </div>
+        <div class="col-sm-1">
+            <img src="https://via.placeholder.com/100" alt="Movie Image">
+        </div>
+        <div class="col-sm-1">
+            <img src="https://via.placeholder.com/100" alt="Movie Image">
+        </div>
+        <div class="col-sm-1">
+            <img src="https://via.placeholder.com/100" alt="Movie Image">
+        </div>
+        <div class="col-sm-1">
+            <img src="https://via.placeholder.com/100" alt="Movie Image">
+        </div>
+        <div class="col-sm-1">
+            <img src="https://via.placeholder.com/100" alt="Movie Image">
+        </div>
+        <div class="col-sm-1">
+            <img src="https://via.placeholder.com/100" alt="Movie Image">
+        </div>
     </div>
 
-    <!-- Second Row (6 images, col-sm-2) -->
+    <!-- Second Row - 6 columns -->
     <div class="row">
-      <div class="col-sm-2"><img src="https://via.placeholder.com/100" alt="Movie Image"></div>
-      <div class="col-sm-2"><img src="https://via.placeholder.com/100" alt="Movie Image"></div>
-      <div class="col-sm-2"><img src="https://via.placeholder.com/100" alt="Movie Image"></div>
-      <div class="col-sm-2"><img src="https://via.placeholder.com/100" alt="Movie Image"></div>
-      <div class="col-sm-2"><img src="https://via.placeholder.com/100" alt="Movie Image"></div>
-      <div class="col-sm-2"><img src="https://via.placeholder.com/100" alt="Movie Image"></div>
+        <!-- Repeat 6 times -->
+        <div class="col-sm-2">
+            <img src="https://via.placeholder.com/100" alt="Movie Image">
+        </div>
+        <div class="col-sm-2">
+            <img src="https://via.placeholder.com/100" alt="Movie Image">
+        </div>
+        <div class="col-sm-2">
+            <img src="https://via.placeholder.com/100" alt="Movie Image">
+        </div>
+        <div class="col-sm-2">
+            <img src="https://via.placeholder.com/100" alt="Movie Image">
+        </div>
+        <div class="col-sm-2">
+            <img src="https://via.placeholder.com/100" alt="Movie Image">
+        </div>
+        <div class="col-sm-2">
+            <img src="https://via.placeholder.com/100" alt="Movie Image">
+        </div>
     </div>
 
-    <!-- Third Row (3 images, col-sm-4) -->
+    <!-- Third Row - 3 columns -->
     <div class="row">
-      <div class="col-sm-4"><img src="https://via.placeholder.com/100" alt="Movie Image"></div>
-      <div class="col-sm-4"><img src="https://via.placeholder.com/100" alt="Movie Image"></div>
-      <div class="col-sm-4"><img src="https://via.placeholder.com/100" alt="Movie Image"></div>
+        <!-- Repeat 3 times -->
+        <div class="col-sm-4">
+            <img src="https://via.placeholder.com/100" alt="Movie Image">
+        </div>
+        <div class="col-sm-4">
+            <img src="https://via.placeholder.com/100" alt="Movie Image">
+        </div>
+        <div class="col-sm-4">
+            <img src="https://via.placeholder.com/100" alt="Movie Image">
+        </div>
     </div>
 
-    <!-- Fourth Row (1 image, col-sm-12) -->
+    <!-- Fourth Row - 1 column -->
     <div class="row">
-      <div class="col-sm-12"><img src="https://via.placeholder.com/100" alt="Movie Image"></div>
+        <div class="col-sm-12">
+            <img src="https://via.placeholder.com/100" alt="Movie Image">
+        </div>
     </div>
-  </div>
+</div>
 
-  <!-- Bootstrap 5 JS (Optional) -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+<!-- Bootstrap 5 JS and dependencies -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+
 </body>
 </html>
