--- a/main.html
+++ b/main.html
@@ -18,86 +18,32 @@
 <div class="container-fluid">
     <!-- First Row - 12 columns -->
     <div class="row">
-        <!-- Repeat 12 times -->
         <div class="col-sm-1">
-            <img src="https://via.placeholder.com/100" alt="Movie Image">
+            <img src="/mnt/data/image.png" alt="Movie Image">
         </div>
-        <div class="col-sm-1">
-            <img src="https://via.placeholder.com/100" alt="Movie Image">
-        </div>
-        <div class="col-sm-1">
-            <img src="https://via.placeholder.com/100" alt="Movie Image">
-        </div>
-        <div class="col-sm-1">
-            <img src="https://via.placeholder.com/100" alt="Movie Image">
-        </div>
-        <div class="col-sm-1">
-            <img src="https://via.placeholder.com/100" alt="Movie Image">
-        </div>
-        <div class="col-sm-1">
-            <img src="https://via.placeholder.com/100" alt="Movie Image">
-        </div>
-        <div class="col-sm-1">
-            <img src="https://via.placeholder.com/100" alt="Movie Image">
-        </div>
-        <div class="col-sm-1">
-            <img src="https://via.placeholder.com/100" alt="Movie Image">
-        </div>
-        <div class="col-sm-1">
-            <img src="https://via.placeholder.com/100" alt="Movie Image">
-        </div>
-        <div class="col-sm-1">
-            <img src="https://via.placeholder.com/100" alt="Movie Image">
-        </div>
-        <div class="col-sm-1">
-            <img src="https://via.placeholder.com/100" alt="Movie Image">
-        </div>
-        <div class="col-sm-1">
-            <img src="https://via.placeholder.com/100" alt="Movie Image">
-        </div>
+        <!-- Repeat this block for the remaining 11 images -->
     </div>
 
     <!-- Second Row - 6 columns -->
     <div class="row">
-        <!-- Repeat 6 times -->
         <div class="col-sm-2">
-            <img src="https://via.placeholder.com/100" alt="Movie Image">
+            <img src="/mnt/data/image.png" alt="Movie Image">
         </div>
-        <div class="col-sm-2">
-            <img src="https://via.placeholder.com/100" alt="Movie Image">
-        </div>
-        <div class="col-sm-2">
-            <img src="https://via.placeholder.com/100" alt="Movie Image">
-        </div>
-        <div class="col-sm-2">
-            <img src="https://via.placeholder.com/100" alt="Movie Image">
-        </div>
-        <div class="col-sm-2">
-            <img src="https://via.placeholder.com/100" alt="Movie Image">
-        </div>
-        <div class="col-sm-2">
-            <img src="https://via.placeholder.com/100" alt="Movie Image">
-        </div>
+        <!-- Repeat this block for the remaining 5 images -->
     </div>
 
     <!-- Third Row - 3 columns -->
     <div class="row">
-        <!-- Repeat 3 times -->
         <div class="col-sm-4">
-            <img src="https://via.placeholder.com/100" alt="Movie Image">
+            <img src="/mnt/data/image.png" alt="Movie Image">
         </div>
-        <div class="col-sm-4">
-            <img src="https://via.placeholder.com/100" alt="Movie Image">
-        </div>
-        <div class="col-sm-4">
-            <img src="https://via.placeholder.com/100" alt="Movie Image">
-        </div>
+        <!-- Repeat this block for the remaining 2 images -->
     </div>
 
     <!-- Fourth Row - 1 column -->
     <div class="row">
         <div class="col-sm-12">
-            <img src="https://via.placeholder.com/100" alt="Movie Image">
+            <img src="/mnt/data/image.png" alt="Movie Image">
         </div>
     </div>
 </div>
